/**
 * The charging system that, charges, locks and releases scooters
 */
class ChargingStations {
    costToHire;

    constructor() {
        this.costToHire = 5;
    }

    /**
     * Charge the battery of the scooter
     */
    chargeScooter() {
    }

    /**
     * Release scooter for customer to use
     */
    releaseScooter() {
    }

    /**
     * Lock scooter until it is full charged and hired by a customer
     */
    lockScooter() {
    }


}

module.exports = ChargingStations;